<resources>
    <string name="app_name">SpeedLearn</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_settings_screen">SettingsScreen</string>

    <string name="title_activity_high_score_screen">HighScoreScreen</string>

    <string name="title_activity_game_screen">GameScreen</string>

    <string name="title_activity_authenticate">Authenticate</string>
    <string name="gameFinished">Game Finished</string>
    <string name="time_0_00">Time | 0:00</string>
    <string name="find_the_value_of_y_shake_for_a_hint">Find The Value Of y | Shake For A Hint</string>
    <string name="nothing">...</string>
    <string name="post_score_to_twitter">Post Score To Twitter</string>
    <string name="main_menu">Main Menu</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="enter">Enter</string>
    <string name="clear">Clear</string>
    <string name="_3n">3</string>
    <string name="high_scores">High Scores</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="_0n">0</string>
    <string name="_0_00">0:00</string>
    <string name="play_game">Play Game</string>
    <string name="high_scoresn">High Scores</string>
    <string name="settings">Settings</string>
    <string name="social_media">Social Media</string>
    <string name="game_music">Game Music</string>
    <string name="settingsn">Settings</string>
</resources>
