<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.adroso360.speedlearn.GameScreen">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/time_0_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTime"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/hintText"
            android:layout_marginTop="10dp"/>

        <TextView
            android:text="@string/find_the_value_of_y_shake_for_a_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructionText"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/nothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currentQuestion"
            android:textSize="45sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerAnswerDisplay"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/post_score_to_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTwitter"
            style="@android:style/Widget.Holo.Button"
            android:gravity="center"
            android:visibility="gone"
            android:backgroundTint="@android:color/holo_blue_light"/>

        <Button
            android:text="@string/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Button"
            android:id="@+id/buttonMenu"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/gridNumbers"
        android:layout_marginTop="70dp">

        <Button android:text="@string/_1"
            android:id="@+id/button1"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_2"
            android:id="@+id/button2"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_3"
            android:id="@+id/button3"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_4"
            android:id="@+id/button4"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_5"
            android:id="@+id/button5"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_6"
            android:id="@+id/button6"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_7"
            android:id="@+id/button7"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold" />
        <Button android:text="@string/_8"
            android:id="@+id/button8"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_9"
            android:id="@+id/button9"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold"/>
        <Button android:text="@string/_0"
            android:id="@+id/button0"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/enter"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/buttonEnter"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textStyle="normal|bold"
            android:textSize="20sp" />
        <Button
            android:text="@string/clear"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/buttonClear"
            android:backgroundTint="@android:color/holo_red_light" />


    </GridLayout>

    <TextView
        android:text="@string/_3n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countDown"
        android:textSize="130sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif"
        android:textAllCaps="false" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>
